--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>net.corruptmc</groupId>
     <artifactId>nocraftplus</artifactId>
     <version>2.0.4</version>
+    <name>NoCraftPlus</name>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
