--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.corruptmc</groupId>
     <artifactId>nocraftplus</artifactId>
-    <version>2.0.5</version>
+    <version>2.0.4</version>
     <name>NoCraftPlus</name>
 
     <properties>
@@ -23,8 +23,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.spigot</groupId>
-            <artifactId>spigot-api</artifactId>
+            <groupId>org.bukkit</groupId>
+            <artifactId>bukkit</artifactId>
             <version>1.16.5-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
