--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,6 @@
 #Material names can be found here:
 #https://hub.spigotmc.org/javadocs/bukkit/org/bukkit/Material.html
+#CaSe SeNsItIvE
 disabled_items:
   - HOPPER
   - TNT
