--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,13 @@
 
     <groupId>net.corruptmc</groupId>
     <artifactId>nocraftplus</artifactId>
-    <version>2.0.6</version>
+    <version>2.1.0</version>
     <name>NoCraftPlus</name>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <java.versaion>16</java.versaion>
     </properties>
 
     <repositories>
@@ -25,7 +26,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.17-R0.1-SNAPSHOT</version>
+            <version>1.17.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
