--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: NoCraftPlus
 main: net.corruptmc.nocraftplus.NoCraftPlugin
-version: ${project.version}
+version: 2.1.1
 api-version: 1.13
 commands:
   nocraftplus:
