--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: NoCraftPlus
 main: net.corruptmc.nocraftplus.NoCraftPlugin
-version: 2.1.1
+version: 2.1.2
 api-version: 1.13
 commands:
   nocraftplus:
@@ -16,6 +16,7 @@ permissions:
       nocraftplus.command.list: true
       nocraftplus.command.reload: true
       nocraftplus.command.remove: true
+      nocraftplus.command.toggle: true
       nocraftplus.updatecheck: true
   nocraftplus.bypass.*:
     description: Bypass all item filters.
@@ -33,5 +34,7 @@ permissions:
     description: Reload item filters from config.
   nocraftplus.command.remove:
     description: Remove an item filter.
+  nocraftplus.command.toggle:
+    description: Toggle blacklist mode.
   nocraftplus.updatecheck:
     description: Alert when update is available.
